--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </div>
                     
                     <div class="text-center mt-3">
-                    <button id="btnSubmit" type="button" class="btn btn-outline-danger" disabled>Submit<button>
+                    <button id="btnSubmit" type="button" class="btn btn-outline-danger" disabled>Submit</button>
                     </div>
                     </div>
                 </div>
@@ -130,4 +130,5 @@
     <script src="./js/bootstrap.bundle.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
